minor styling and social links added

--- a/index.html
+++ b/index.html
@@ -40,32 +40,38 @@
       </svg>
       <div class="content">
         <img src="assets/avatar.jpeg" alt="Animesh" class="avatar" />
-
         <div class="name-and-descriptiom">
           <h1>Animesh Swain</h1>
-          <p>Pythonista</p>
-          <p>I build awesome web applications.</p>
+          <p>(Pythonista)</p>
         </div>
+        <p class="underline">Contact Me</p>
         <div class="social-links">
-          <a href="https://github.com/your-username" target="_blank"
-            ><i class="fab fa-github"></i
+          <a href="https://github.com/skanimesh10" target="_blank"
+            ><i class="fa-brands fa-github-alt"></i
           ></a>
-          <a href="https://linkedin.com/in/your-username" target="_blank"
-            ><i class="fab fa-linkedin"></i
+          <a href="https://www.linkedin.com/in/skanimesh10" target="_blank"
+            ><i class="fa-brands fa-linkedin-in"></i
           ></a>
-          <a href="https://twitter.com/your-username" target="_blank"
+          <a href="mailto:skanimesh10@gmail.com" target="_blank"
+            ><i class="fa-solid fa-at"></i
+          ></a>
+
+          <a href="https://www.instagram.com/aa_animesh/" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://twitter.com/aa_animesh" target="_blank"
             ><i class="fab fa-twitter"></i
           ></a>
-          <a href="https://reddit.com/in/your-username" target="_blank"
-            ><i class="fab fa-reddit"></i
-          ></a>
-          <a href="https://instagram.com/in/your-username" target="_blank"
-            ><i class="fab fa-instagram"></i
-          ></a>
+
           <!-- Add more social links as needed -->
         </div>
         <div class="python-logo">
-          <img src="assets/python.webp" alt="Python Logo" />
+          <img src="assets/python.png" alt="Python Logo" />
+          <!-- <a
+            href="https://www.flaticon.com/free-icons/python"
+            title="python icons"
+            >Python icons created by Freepik - Flaticon</a
+          > -->
         </div>
       </div>
     </div>
