Avatar update with bg, get in touch added with respective colors, python logo removed, credit page updated(hidden), crest updated

--- a/index.html
+++ b/index.html
@@ -39,41 +39,41 @@
         />
       </svg>
       <div class="content">
-        <img src="assets/avatar.jpeg" alt="Animesh" class="avatar" />
+        <img src="assets/avatar.png" alt="Animesh" class="avatar" />
         <div class="name-and-descriptiom">
           <h1>Animesh Swain</h1>
           <p>(Pythonista)</p>
         </div>
-        <p class="underline">Contact Me</p>
+        <p class="underline">Get in touch</p>
         <div class="social-links">
           <a href="https://github.com/skanimesh10" target="_blank"
-            ><i class="fa-brands fa-github-alt"></i
+            ><i class="fa-brands fa-github-alt fab"></i
           ></a>
           <a href="https://www.linkedin.com/in/skanimesh10" target="_blank"
-            ><i class="fa-brands fa-linkedin-in"></i
+            ><i class="fa-brands fa-linkedin-in fab"></i
           ></a>
           <a href="mailto:skanimesh10@gmail.com" target="_blank"
-            ><i class="fa-solid fa-at"></i
+            ><i class="fa-solid fa-envelope"></i
           ></a>
 
           <a href="https://www.instagram.com/aa_animesh/" target="_blank"
-            ><i class="fa-brands fa-instagram"></i
+            ><i class="fa-brands fa-instagram fab"></i
           ></a>
           <a href="https://twitter.com/aa_animesh" target="_blank"
-            ><i class="fab fa-twitter"></i
+            ><i class="fab fa-twitter fab"></i
           ></a>
-
-          <!-- Add more social links as needed -->
         </div>
-        <div class="python-logo">
-          <img src="assets/python.png" alt="Python Logo" />
-          <!-- <a
-            href="https://www.flaticon.com/free-icons/python"
-            title="python icons"
-            >Python icons created by Freepik - Flaticon</a
-          > -->
-        </div>
+        <!-- <div class="python-logo">
+          <img src="assets/python.webp" alt="Python Logo" />
+        </div> -->
       </div>
+    </div>
+    <div>
+      <div class="logo-container">
+        <img src="assets/fcb.png" alt="FCBlogo" class="crest" />
+      </div>
+      <p class="credit">Visca Barça</p>
+      <!-- <a href="./credits.html" class="credit">Credits</a> -->
     </div>
     <div class="gradient-bg">
       <svg
